more refactoring and sanity checks

--- a/DalamudKey Updater/DalamudKeyUpdater.csproj
+++ b/DalamudKey Updater/DalamudKeyUpdater.csproj
@@ -7,8 +7,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D69806CC-646F-40FA-A0AB-15F3F9E5BFD3}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>DalamudKey_Updater</RootNamespace>
-    <AssemblyName>DalamudKey Updater</AssemblyName>
+    <RootNamespace>DalamudKeyUpdater</RootNamespace>
+    <AssemblyName>DalamudKeyUpdater</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -185,16 +185,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="DalamudKeyUpdater.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="DalamudKeyUpdater.Designer.cs">
+      <DependentUpon>DalamudKeyUpdater.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="DalamudKeyUpdater.resx">
+      <DependentUpon>DalamudKeyUpdater.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -204,6 +204,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
